--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Proyecto-3</title>
   </head>
   <body>
-    <div id="app"></div>
+    <header></header>
+    <main>
+      <div id="gallery"></div>
+      <div id="filter"></div>
+    </main>
+    <footer></footer>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
